# Experiment-Big-Men

./: CMakeLists.txt
src/factorial/: factorial.cpp
src/text-query-system/code/: Line.cpp  Line.h  Paragraph.h  Word.cpp  Word.h  main.cpp
src/text-query-system/tests/: TextQueryTests.cpp
src/vector/: size_capacity.cpp
